crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__string_escaping.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(r#\"\"Hello, \\\"world\\\"!\"\"#)"
---
Str(
    "Hello, \"world\"!",
) from virtual:<test>:0-19
