crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__string_unescaping.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(r#\"\"Hello\\nWorld\"\"#)"
---
Str(
    "Hello\nWorld",
) from virtual:<test>:0-14
