crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__suffix.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(\"std.test\")"
---
Index {
    indexable: Var(
        "std",
    ) from virtual:<test>:0-3,
    parts: [
        IndexPart {
            value: Str(
                "test",
            ) from virtual:<test>:4-8,
        },
    ],
} from virtual:<test>:0-8
